fix: fix: after PR comment like https://github.com/bmv87/otus-java/pull/9#discussion_r1616665610 & https://github.com/bmv87/otus-java/pull/9#discussion_r1616668342 & https://github.com/bmv87/otus-java/pull/9#discussion_r1616670481 & https://github.com/bmv87/otus-java/pull/9#discussion_r1616675646